--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,9 @@
 body {
-  margin: 0;
+  margin-top: 2%;
+  margin-right: 5%;
+    margin-left: 5%;
+
   padding: 0;
   font-family: sans-serif;
+  background-color: dimgray;
 }
